--- a/00-T1-CS1B-FIA-April-2024/T1_Question_04.Rmd
+++ b/00-T1-CS1B-FIA-April-2024/T1_Question_04.Rmd
@@ -70,7 +70,87 @@ The maximum likelihood estimator for the parameter λ based on a random sample
 (v) Estimate the value of λ using the maximum likelihood estimator given above
 and the sample in randomSample.Rdata. 
 (vi) Comment on the plot in part (iv) and the estimate in part (v). 
-[Total 24]
+
+Sure, let's go through each part of the problem in detail.
+
+---
+
+### (i) Plot the CDF \( F(x) \) as a function of \( x \) for \( x = 0, 0.1, 0.2, \ldots, 9.9, 10 \) when \( \lambda = 0.2 \):
+
+```r
+x = seq(0, 10, by = 0.1)
+lambda = 0.2
+F = 1 - exp(-lambda * x^2)
+plot(x, F, type = "l", main = "CDF of X", xlab = "x", ylab = "F(x)")
+```
+This code produces the plot of the cumulative distribution function (CDF) of \( X \).
+
+---
+
+### (ii) Plot the density function \( f(x) \) of \( X \) as a function of \( x \) for \( x = 0, 0.1, 0.2, \ldots, 9.9, 10 \) when \( \lambda = 0.2 \):
+
+The density function \( f(x) \) is the derivative of the CDF:
+\[ f(x) = \begin{cases} 
+0 & \text{if } x < 0 \\ 
+2\lambda x \exp(-\lambda x^2) & \text{if } x \geq 0 
+\end{cases} \]
+
+```r
+d = 2 * lambda * x * exp(-lambda * x^2)
+plot(x, d, type = "l", main = "Density of X", xlab = "x", ylab = "f(x)")
+```
+This code generates the plot of the density function \( f(x) \) of \( X \).
+
+---
+
+### (iii) Calculate the value of the log likelihood function for the parameter \( \lambda \) at the point \( \lambda = 0.2 \) based on the random sample:
+
+```r
+load("randomSample.Rdata")
+d = 2 * lambda * x * exp(-lambda * x^2)
+ll = sum(log(d))
+ll # The value of the log likelihood function
+```
+The log likelihood value for \( \lambda = 0.2 \) based on the sample is approximately -139.7437.
+
+---
+
+### (iv) Plot the values of the log likelihood function for the parameter \( \lambda \) based on the sample:
+
+```r
+ll = numeric(100)
+lambda_vals = seq(0.01, 1, by = 0.01)
+for (k in 1:100) {
+    lambda_k = lambda_vals[k]
+    ll[k] = sum(log(2 * lambda_k * x * exp(-lambda_k * x^2)))
+}
+plot(lambda_vals, ll, type = "l", main = "Log Likelihood", xlab = "lambda", ylab = "Log Likelihood")
+```
+This code produces the plot of the log likelihood function for values of \( \lambda \) ranging from 0.01 to 1.
+
+---
+
+### (v) Estimate the value of \( \lambda \) using the maximum likelihood estimator (MLE) and the sample in randomSample.Rdata:
+
+The MLE for \( \lambda \) is given by:
+\[ \hat{\lambda} = \frac{N}{\sum_{i=1}^{N} X_i^2} \]
+
+```r
+N = length(x) # sample size
+lambda_hat = N / sum(x^2)
+lambda_hat # The MLE of lambda
+```
+The estimated value of \( \lambda \) using the MLE is approximately 0.191256.
+
+---
+
+### (vi) Comment on the plot in part (iv) and the estimate in part (v):
+
+The plot of the log likelihood function shows a maximum near \( \lambda = 0.2 \), which aligns with the MLE obtained. This indicates that the estimate of \( \lambda \) is consistent with the sample data and the model.
+
+---
+
+These steps and comments provide a detailed solution to the given problem. If you have further questions or need additional clarification, feel free to ask!
 ---–6
 
 Q4
