--- a/00-R1-CS1B-FIA-Sep-2023/R1-Question-1.Rmd
+++ b/00-R1-CS1B-FIA-Sep-2023/R1-Question-1.Rmd
@@ -69,6 +69,104 @@ on the histogram produced in part (ii).
 (iv) Comment on the sampling distribution of the sample mean and the application
 of the CLT in this case based on your answers to parts (ii) and (iii). 
 
+### Title: Simulation and Analysis of Exponential Distribution Using Inverse Transform Method
+
+#### Description:
+This exercise involves simulating samples from an exponential distribution, analyzing their means, and examining the application of the Central Limit Theorem (CLT).
+
+---
+
+### Exercises
+
+###Exercise A.
+
+**Simulate 10,000 samples from an Exp(3) distribution**
+
+* Simulate 10,000 samples of size $n = 10$ from an exponential distribution with rate parameter $\theta = 3$ using the inverse transform method. 
+* Initialize the random number generator with `set.seed(3202)` before the simulation.
+
+
+```{r}
+set.seed(3202)
+n = 10
+theta = 3
+
+# Initialize matrix, each sample in a row
+m1 = matrix(0, nrow = 10^4, ncol = n)  
+for (i in 1:10^4) {
+  u = runif(n, 0, 1)
+  m = -log(1 - u) / theta  # Generate samples in rows
+  m1[i, ] = m
+}
+```
+
+---
+
+### Exercise B. 
+
+**Plot a histogram of the means of the samples**
+
+Plot a histogram of the means of the samples generated in exercise A, using the probability density scale.
+
+
+```{r}
+xbar.a = apply(m1, 1, mean)
+hist(xbar.a, freq = FALSE, main = "Sampling distribution of Xbar")
+```
+
+---
+
+```{r}
+xbar.a = apply(m1, 1, mean)
+hist(xbar.a, freq = FALSE, main = "Sampling distribution of Xbar")
+```
+
+---
+
+### Exercise C. 
+
+**Plot the PDF of the sampling distribution under the CLT**
+
+Using the CLT, plot the Probability Density Function (PDF) of the sampling distribution of the sample mean. 
+Superimpose this PDF on the histogram from part B..
+
+**R code:**
+```{r eval=FALSE}
+hist(xbar.a, freq = FALSE, 
+	main = "Sampling distribution of Xbar")
+
+x.grid = seq(0, 1, length = 1000)
+lines(x.grid, dnorm(x.grid, 1/3, sqrt(1/90)))
+```
+
+---
+### Exercise C. 
+
+```{r echo=FALSE}
+hist(xbar.a, freq = FALSE, main = "Sampling distribution of Xbar")
+x.grid = seq(0, 1, length = 1000)
+lines(x.grid, dnorm(x.grid, 1/3, sqrt(1/90)))
+```
+
+---
+
+### Exercise D.
+
+**Comment on the sampling distribution and the CLT application**
+
+Based on the histogram and the superimposed PDF, comment on the sampling distribution of the sample mean and the application of the CLT in this case.
+
+**Comments:**
+- The sampling distribution of the sample mean is relatively asymmetrical compared to the normal distribution.
+- The Central Limit Theorem does not work very well here as the sample size is small ($n = 10$).
+
+---
+
+This exercise illustrates the process of simulating data from an exponential distribution, analyzing sample means, and understanding the limitations of the CLT with small sample sizes.
+
+---
+
+---
 ---
 Q1
 (i)
