--- a/00-R1-CS1B-FIA-Sep-2023/R1-Question-2.Rmd
+++ b/00-R1-CS1B-FIA-Sep-2023/R1-Question-2.Rmd
@@ -89,6 +89,66 @@ approximation.
 *  State your conclusion based on the calculated p-value.
 
 --- 
+### Title: Investigating the Proportion of Electric Cars in Two Populations
+
+#### Description:
+This exercise involves simulating data, estimating confidence intervals, and performing hypothesis testing to investigate the proportion of electric cars among registered cars in two large populations (A and B).
+
+---
+
+### Exercises
+
+#### 1 (i) Simulate the Two Samples
+Simulate two samples assuming the proportion of electric cars in population A is 0.02, while in population B it is 0.025. Initialize the random number generator with `set.seed(12345)`.
+
+**R code:**
+```{r}
+set.seed(12345)
+data.A = rbinom(900, 1, 0.020)
+data.B = rbinom(1200, 1, 0.025)
+```
+
+#### (ii) Determine a 99% Confidence Interval for the Difference in Proportions
+Using the sample data, determine an equal-tailed 99% confidence interval for the difference in the true proportions of electric cars in populations A and B.
+
+**R code:**
+```{r}
+n.A = length(data.A)
+n.B = length(data.B)
+thetahat.A = sum(data.A) / n.A
+thetahat.B = sum(data.B) / n.B
+ese.diff = sqrt(thetahat.A * (1 - thetahat.A) / n.A + thetahat.B * (1 - thetahat.B) / n.B)
+ci.theta.diff = (thetahat.A - thetahat.B) + c(-1, 1) * qnorm(0.995) * ese.diff
+ci.theta.diff
+# [-0.025631365, 0.009520254]
+```
+
+The 99% CI for the difference in proportions is [-0.025631365, 0.009520254].
+
+#### (iii) Perform a Hypothesis Test
+Perform a hypothesis test to investigate whether the proportion of electric cars in population A is lower than in population B.
+
+**Hypotheses:**
+- \( H_0: \theta_A = \theta_B \)
+- \( H_1: \theta_A < \theta_B \)
+
+**R code:**
+```{r}
+thetahat.common = (sum(data.A) + sum(data.B)) / (n.A + n.B)
+ese.diff.H0 = sqrt(thetahat.common * (1 - thetahat.common) * (1 / n.A + 1 / n.B))
+stat.diff = (thetahat.A - thetahat.B) / ese.diff.H0
+pvalue.diff = pnorm(stat.diff)
+pvalue.diff
+# 0.1242166
+```
+
+**Conclusion:**
+The value of the test statistic is -1.154163, and the p-value is 0.1242166. Since the p-value is greater than the typical significance level (e.g., 0.05), we do not reject the null hypothesis. Therefore, we do not have sufficient evidence to conclude that the proportion of electric cars in population A is lower than in population B.
+
+---
+
+This exercise demonstrates how to simulate data, estimate confidence intervals, and perform hypothesis testing using R. If you have any further questions or need more details, feel free to ask!
+
 Q2
 (i)
 Simulate samples:
