--- a/00-T2-CS2B-FIA-April-2024/T2-Question1.Rmd
+++ b/00-T2-CS2B-FIA-April-2024/T2-Question1.Rmd
@@ -1,5 +1,3 @@
-
-
 1 An insurer has written ten insurance policies under which, at most, one claim can be
 made from each policy. The probability of a claim from policy i is as follows:
 Pi = 0.1 + 0.02i for i = 1, 2, …, 10
@@ -7,33 +5,199 @@ Claim amounts for all policies follow the same Gamma distribution with shape
 parameter α = 10 and rate parameter λ = 2.
 (i) Construct R code to generate and display a single vector setting out the
 probability of a claim for each policy using the seq function. 
-(ii) Construct R code to calculate and display the theoretical mean and theoretical
+B. Construct R code to calculate and display the theoretical mean and theoretical
 standard deviation of the total claim amounts. 
-(iii) Construct R code to generate 1,000,000 simulations of claim amounts under
+C. Construct R code to generate 1,000,000 simulations of claim amounts under
 each of the ten policies, using a random number generator seed of 500 and
-display the first five sets of simulations. [6]
-(iv) Construct R code to generate and display a vector showing the mean and
+display the first five sets of simulations. 
+D. Construct R code to generate and display a vector showing the mean and
 standard deviation of claim amounts for each policy from the simulations
-in part (iii). [3]
-(v) Calculate the mean and standard deviation of the total claim amounts from
-the ten policies in this portfolio from the simulations in part (iii) and compare
-these with your answers in part (ii). [4]
-(vi) Estimate, from the simulations in part (iii), the probability that there will be
+in exercise C.
+E.  Calculate the mean and standard deviation of the total claim amounts from
+the ten policies in this portfolio from the simulations in exercise C. and compare
+these with your answers in exercise B.
+F. Estimate, from the simulations in exercise C, the probability that there will be
 no claims incurred from all ten policies. 
-(vii) Calculate the 99th percentile of total claim amounts from the simulations in
-part (iii). 
-(viii) Plot a histogram of the simulated total claim amounts, showing density on the
+G. Calculate the 99th percentile of total claim amounts from the simulations in
+part C.. 
+H. Plot a histogram of the simulated total claim amounts, showing density on the
 y-axis. 
-(ix) Plot a density function of the Normal distribution using the parameter values
-from part (ii) on top of the histogram in part (viii). 
-(x) Calculate the 99th percentile of total claim amounts using the Normal
-distribution in part (ix) to approximate the total claims distribution. 
-(xi) Comment on the appropriateness of using the Normal distribution in this case.
-
-(xii) Plot a graph similar to the one in part (ix), but with the probability of a claim
+I. Plot a density function of the Normal distribution using the parameter values
+from part B. on top of the histogram in exercise H. 
+J. Calculate the 99th percentile of total claim amounts using the Normal
+distribution in exercise I to approximate the total claims distribution. 
+K. Comment on the appropriateness of using the Normal distribution in this case.
+L. Plot a graph similar to the one in exercise I, but with the probability of a claim
 from policy i as follows:
 Pi = 0.4 + 0.02i for i = 1, 2, …, 10
-[3]
-(xiii) Comment on the appropriateness of using the Normal distribution in this new
-case. [3]
-[Total 38]
+M. Comment on the appropriateness of using the Normal distribution in this new
+case. 
+
+### Steps for Analyzing Insurance Policies and Claim Amounts
+
+### Exercise(i) Generate Probability of Claims for Each Policy
+
+```r
+# Generate and display probability of a claim for each policy using the seq function
+probabilities <- seq(0.1 + 0.02, by = 0.02, length.out = 10)
+print(probabilities)
+```
+
+### ExerciseB. Calculate Theoretical Mean and Standard Deviation of Total Claim Amounts
+
+The claim amounts follow a Gamma distribution with shape parameter α = 10 and rate parameter λ = 2.
+
+**Theoretical Mean and Standard Deviation**:
+- Mean of a single policy claim amount: \( \alpha / \lambda$
+- Variance of a single policy claim amount: \( \alpha / \lambda^2$
+
+For the total claim amounts:
+- Mean: \( \sum_{i=1}^{10} \text{probability}_i \times (\alpha / \lambda)$
+- Variance: \( \sum_{i=1}^{10} \text{probability}_i \times (\alpha / \lambda^2)$
+
+
+```r
+alpha <- 10
+lambda <- 2
+
+# Calculate mean and variance of the total claim amounts
+mean_total <- sum(probabilities * (alpha / lambda))
+var_total <- sum(probabilities * (alpha / lambda^2))
+sd_total <- sqrt(var_total)
+
+cat("Theoretical Mean:", mean_total, "\n")
+cat("Theoretical Standard Deviation:", sd_total, "\n")
+```
+
+### ExerciseC. Generate 1,000,000 Simulations of Claim Amounts
+
+
+```r
+set.seed(500)
+n_simulations <- 1000000
+claim_amounts <- matrix(0, nrow = n_simulations, ncol = 10)
+
+for (i in 1:10) {
+  claims <- rbinom(n_simulations, 1, probabilities[i]) * rgamma(n_simulations, alpha, rate = lambda)
+  claim_amounts[, i] <- claims
+}
+
+# Display the first five sets of simulations
+head(claim_amounts, 5)
+```
+
+### ExerciseD. Calculate Mean and Standard Deviation of Claim Amounts from Simulations
+
+
+```r
+means_simulated <- apply(claim_amounts, 2, mean)
+sds_simulated <- apply(claim_amounts, 2, sd)
+
+cat("Simulated Means:\n", means_simulated, "\n")
+cat("Simulated Standard Deviations:\n", sds_simulated, "\n")
+```
+
+### ExerciseE. Calculate Mean and Standard Deviation of Total Claim Amounts from Simulations
+
+
+```r
+total_claims <- rowSums(claim_amounts)
+mean_total_simulated <- mean(total_claims)
+sd_total_simulated <- sd(total_claims)
+
+cat("Simulated Total Mean:", mean_total_simulated, "\n")
+cat("Simulated Total Standard Deviation:", sd_total_simulated, "\n")
+```
+
+**Comparison**:
+- Theoretical Mean: \( \text{calculated in B}$
+- Simulated Mean: \( \text{calculated here}$
+
+### ExerciseF. Estimate Probability of No Claims from All Policies
+
+
+```r
+prob_no_claims <- mean(rowSums(claim_amounts) == 0)
+cat("Probability of No Claims:", prob_no_claims, "\n")
+```
+
+### Exercise G. Calculate the 99th Percentile of Total Claim Amounts from Simulations
+
+
+```r
+percentile_99 <- quantile(total_claims, 0.99)
+cat("99th Percentile of Total Claims:", percentile_99, "\n")
+```
+
+### Exercise H. 
+
+**Plot a Histogram of Simulated Total Claim Amounts**
+
+
+```r
+hist(total_claims, freq = FALSE, main = "Histogram of Simulated Total Claim Amounts", xlab = "Total Claim Amounts", ylab = "Density")
+```
+
+---
+
+### Exercise I. 
+
+**Plot Density Function of Normal Distribution on Top of Histogram**
+
+
+```r
+# Plot the histogram
+hist(total_claims, freq = FALSE, main = "Histogram of Simulated Total Claim Amounts with Normal Distribution", xlab = "Total Claim Amounts", ylab = "Density")
+# Plot the normal distribution
+x <- seq(min(total_claims), max(total_claims), length = 1000)
+lines(x, dnorm(x, mean = mean_total, sd = sd_total), col = "red", lwd = 2)
+```
+
+---
+
+### Exercise J. 
+
+**Calculate the 99th Percentile Using the Normal Distribution**
+
+
+```r
+percentile_99_normal <- qnorm(0.99, mean = mean_total, sd = sd_total)
+cat("99th Percentile of Total Claims (Normal Distribution):", percentile_99_normal, "\n")
+```
+
+### ExerciseK. Comment on the Appropriateness of Using the Normal Distribution
+
+- The Normal distribution may not be a perfect fit if the data is skewed or has heavy tails. 
+- Visual comparison of the histogram and the Normal density function can help in assessing the fit.
+- Differences between the simulated 99th percentile and the Normal approximation provide further insight.
+
+### ExerciseL. Plot a Graph with Different Claim Probabilities (Pi = 0.4 + 0.02i)
+
+
+```r
+probabilities_new <- seq(0.4 + 0.02, by = 0.02, length.out = 10)
+
+# Generate new simulations
+set.seed(500)
+claim_amounts_new <- matrix(0, nrow = n_simulations, ncol = 10)
+
+for (i in 1:10) {
+  claims_new <- rbinom(n_simulations, 1, probabilities_new[i]) * rgamma(n_simulations, alpha, rate = lambda)
+  claim_amounts_new[, i] <- claims_new
+}
+
+total_claims_new <- rowSums(claim_amounts_new)
+
+# Plot the histogram
+hist(total_claims_new, freq = FALSE, main = "Histogram of Simulated Total Claim Amounts (New Probabilities)", xlab = "Total Claim Amounts", ylab = "Density")
+# Plot the normal distribution
+lines(x, dnorm(x, mean = mean(total_claims_new), sd = sd(total_claims_new)), col = "red", lwd = 2)
+```
+
+### ExerciseM. Comment on the Appropriateness of Using the Normal Distribution in the New Case
+
+- The increased probabilities may lead to a better fit for the Normal distribution due to reduced skewness.
+- As more policies are likely to have claims, the Central Limit Theorem may be more applicable.
+- Visual and numerical comparisons similar to previous steps can help assess the fit.
+
+Feel free to ask if you have any specific questions or need further explanations!
